--- a/nutritec/package.json
+++ b/nutritec/package.json
@@ -12,6 +12,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.9.0-beta.1",
     "react-dom": "^18.3.1",
+    "react-google-login": "^5.2.2",
     "react-oauth": "^0.0.1",
     "react-router-dom": "^6.23.0",
     "web-vitals": "^2.1.4"
