--- a/nutritec/package.json
+++ b/nutritec/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@react-oauth/google": "^0.12.1",
@@ -20,6 +21,7 @@
     "react-bootstrap": "^2.9.0-beta.1",
     "react-dom": "^18.3.1",
     "react-google-login": "^5.2.2",
+    "react-intersection-observer": "^9.10.3",
     "react-oauth": "^0.0.1",
     "react-router-dom": "^6.23.1",
     "web-vitals": "^2.1.4",
