--- a/nutritec/package.json
+++ b/nutritec/package.json
@@ -14,11 +14,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.3",
     "jquery": "^3.7.1",
     "openai": "^4.47.1",
     "parallax-js": "^3.1.0",
+    "popper.js": "^1.16.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.9.0-beta.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-google-login": "^5.2.2",
     "react-intersection-observer": "^9.10.3",
